Bug 418970 - umbrello does not import sequences of C++ comments
Summary: umbrello does not import sequences of C++ comments
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 2.30.3 (KDE releases 19.12.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-17 19:39 UTC by Ralf Habacker
Modified: 2020-05-04 08:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.31.1 (KDE releases 20.04.1)
Sentry Crash Report:


Attachments
test header file (1.06 KB, text/x-chdr)
2020-03-17 19:39 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-03-17 19:39:05 UTC
Created attachment 126856 [details]
test header file

SUMMARY
doxygen describes at http://www.doxygen.nl/manual/docblocks.html a way to document c++ code by using a block of at least two C++ comment lines, where each line starts with an additional slash or an exclamation mark. Here are examples of the two cases:

///
/// ... text ...
///

or

//!
//!... text ...
//!

The documentation from c++ projects, which are using such documentation could not be imported completly into umbrello, because in the recent umbrello imports only the last line.
 
STEPS TO REPRODUCE
1. start umbrello
2. save appended test case to a local file
3. import saved file into umbrello
4. Inspect the documentation of the imported file

OBSERVED RESULT
The documentation from class comments_class_test1c, comments_class_test1d and comments_class_test1e are incomplete.


EXPECTED RESULT
The documentation of the mentioned classes should be imported completly.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE_Leap_15.1
KDE Frameworks Version: 5.55.0
Qt Version: 5.9.7
Comment 1 Ralf Habacker 2020-04-20 11:24:59 UTC
Git commit 1e3c428d2318b554965b51d9972d1fa8a4493bd0 by Ralf Habacker.
Committed on 20/04/2020 at 11:23.
Pushed by habacker into branch 'master'.

Add documentation to class Driver

M  +4    -0    lib/cppparser/driver.h

https://invent.kde.org/kde/umbrello/commit/1e3c428d2318b554965b51d9972d1fa8a4493bd0
Comment 2 Ralf Habacker 2020-04-21 07:59:46 UTC
Git commit 2be2ad9ebd19531a827aff7dce4614a25d1c5629 by Ralf Habacker.
Committed on 21/04/2020 at 07:59.
Pushed by habacker into branch '418970-multi-line-c++-comment-import'.

Initial work for combining multi line c++ comments

M  +5    -4    lib/cppparser/parser.cpp
M  +23   -1    lib/cppparser/parser.h

https://invent.kde.org/kde/umbrello/commit/2be2ad9ebd19531a827aff7dce4614a25d1c5629
Comment 3 Ralf Habacker 2020-04-21 07:59:46 UTC
Git commit dac58bb4d78a81cb73c96f8e81cc397073c9b4da by Ralf Habacker.
Committed on 21/04/2020 at 07:59.
Pushed by habacker into branch '418970-multi-line-c++-comment-import'.

Extend test case for class comments

M  +44   -7    test/import/cxx/comments-class.h

https://invent.kde.org/kde/umbrello/commit/dac58bb4d78a81cb73c96f8e81cc397073c9b4da
Comment 4 Ralf Habacker 2020-05-04 08:20:29 UTC
Git commit dec330247ed162ac38c34158554cf69979767a64 by Ralf Habacker, on behalf of Simon Martens.
Committed on 04/05/2020 at 08:12.
Pushed by habacker into branch 'release/20.04'.

Fixes for adding multiline c++ comment support
FIXED-IN:2.31.1 (KDE releases 20.04.1)

M  +42   -5    lib/cppparser/parser.cpp
M  +25   -20   lib/cppparser/parser.h

https://invent.kde.org/kde/umbrello/commit/dec330247ed162ac38c34158554cf69979767a64