Fixes for adding multiline c++ comment support

BUG:418970
FIXED-IN:2.31.1 (KDE releases 20.04.1)